# exploring-cryptography-with-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup.sh
.github/workflows/: docs.yml  format.yml  tests.yml  website.yml
book/: book.toml
book/src/en/: SUMMARY.md  intro.md
book/src/en/introduction_to_mathematical_cryptography/: index.md
book/src/en/introduction_to_modern_cryptography/: index.md
book/src/en/proofs_arguments_zeroknowledge/: index.md
book/src/en/rational_points_on_elliptic_curves/: index.md
book/src/en/serious_cryptography/: index.md
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs
crates/introduction_to_mathematical_cryptography/caesar_cipher/: Cargo.toml
crates/introduction_to_mathematical_cryptography/caesar_cipher/examples/: caesar_cipher.rs
crates/introduction_to_mathematical_cryptography/caesar_cipher/src/: lib.rs
crates/introduction_to_mathematical_cryptography/caesar_cipher/tests/: caesar_cipher_tests.rs
crates/introduction_to_mathematical_cryptography/modular_arithmetic/: Cargo.toml
crates/introduction_to_mathematical_cryptography/modular_arithmetic/examples/: modular_arithmetic.rs
crates/introduction_to_mathematical_cryptography/modular_arithmetic/src/: lib.rs
crates/introduction_to_mathematical_cryptography/modular_arithmetic/tests/: modular_arithmetic_tests.rs
crates/introduction_to_mathematical_cryptography/substitution_cipher/: Cargo.toml
crates/introduction_to_mathematical_cryptography/substitution_cipher/examples/: substitution_cipher.rs
crates/introduction_to_mathematical_cryptography/xgcd/: Cargo.toml
crates/proofs_arguments_zeroknowledge/fingerprint/: Cargo.toml
crates/proofs_arguments_zeroknowledge/fingerprint/benches/: fingerprint_bench.rs
crates/proofs_arguments_zeroknowledge/fingerprint/examples/: rs_lagrange.rs  rs_polynomial.rs
crates/proofs_arguments_zeroknowledge/fingerprint/src/: lib.rs
crates/proofs_arguments_zeroknowledge/fingerprint/tests/: fingerprint_tests.rs
crates/proofs_arguments_zeroknowledge/freivalds/: Cargo.toml
crates/proofs_arguments_zeroknowledge/freivalds/benches/: freivalds_bench.rs
crates/proofs_arguments_zeroknowledge/freivalds/examples/: freivalds.rs
crates/proofs_arguments_zeroknowledge/freivalds/src/: lib.rs
crates/proofs_arguments_zeroknowledge/freivalds/tests/: freivalds_tests.rs
crates/visualizer/: Cargo.toml
crates/visualizer/src/: dummy.rs  lib.rs
(+6 files in other folders)
